apply plugin: 'java'

buildscript {
    dependencies {
        classpath files('../btrace-compiler/build/classes/main/java')
    }
}

sourceSets {
    java15 {
        java {
            srcDirs = ['src/main/java15']
        }
    }
}

dependencies {
    compile(group: 'org.ow2.asm', name: 'asm', version: "${rootProject.asmVersion}")
    compile(group: 'org.ow2.asm', name: 'asm-tree', version: "${rootProject.asmVersion}")
    compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc4'
    compile project(':btrace-core')
    compile project(':btrace-runtime')
    compile project(':btrace-compiler')
    compile project(':btrace-statsd')
    testCompile project(':btrace-client')
}

compileJava15Java {
    onlyIf {
        JavaVersion.current() >= JavaVersion.VERSION_15
    }
    sourceCompatibility = 15
    targetCompatibility = 15
    options.fork = true
    options.forkOptions.executable = "${project.property("JAVA_15_HOME")}/bin/javac"
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

compileTestJava {
    sourceCompatibility = 7
    targetCompatibility = 7
    options.fork = true
    options.forkOptions.executable = "${project.property("JAVA_8_HOME")}/bin/javac"
}

task compileTestProbes {
    dependsOn compileTestJava
    doLast {
        def path = project(':btrace-instr').sourceSets.main.runtimeClasspath

        def loader = new URLClassLoader(path.collect { f -> f.toURL() } as URL[])
        def compiler = loader.loadClass('org.openjdk.btrace.compiler.Compiler')
        def rtCp = sourceSets.main.runtimeClasspath.collect { it.absolutePath }.join(':')

        def args = ["-cp", "${buildDir}/classes/java/test:${rtCp}", "-d", "${buildDir}/classes"]

        def files = fileTree(dir: "src/test/btrace", include: '**/*.java', exclude: 'verifier/**/*.java').findAll {
            it != null
        }.collect { it }

        args.addAll(files)

        compiler.main(args as String[])
    }
}

test {
    onlyIf {
        new File("${projectDir}/../btrace-dist/build/resources/main/${project.version}/libs/btrace-client.jar").exists()
    }
    dependsOn cleanTest
    inputs.files compileTestProbes.outputs
    //inputs.files buildDTrace.outputs
    testLogging.showStandardStreams = true

    jvmArgs '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', "-Dproject.version=${project.version}"
}

dependencies {
    java15Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }
}

jar {
    into('') {
        from sourceSets.java15.output
    }
}